--- a/src/main/resources/com/example/banksys/PaskolosSkaiciuokle.fxml
+++ b/src/main/resources/com/example/banksys/PaskolosSkaiciuokle.fxml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
@@ -14,6 +12,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 
 <BorderPane prefHeight="600.0" prefWidth="1200.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.banksys.PaskolosSkaiciuokleController">
     <left>
@@ -129,11 +130,12 @@
                     </children>
                 </HBox>
 
-                <ScrollPane fitToWidth="true" prefHeight="275.0" prefWidth="332.0" styleClass="scroll-pane">
-                    <content>
-                        <Label fx:id="resultLabel" prefWidth="650.0" styleClass="payment-details" text="Rezultatas bus čia..." wrapText="true" />
-                    </content>
-                </ScrollPane>
+                <TableView fx:id="paymentTable" prefHeight="275.0" prefWidth="650.0"  xmlns:fx="http://javafx.com/fxml/1">
+                    <columns>
+                        <TableColumn fx:id="monthColumn" text="Mėnuo" prefWidth="150.0" />
+                        <TableColumn fx:id="paymentColumn" text="Įmoka (€)" prefWidth="200.0" />
+                    </columns>
+                </TableView>
                   <VBox fx:id="chartContainer" prefHeight="300.0" prefWidth="300.0" spacing="10.0">
                         </VBox>
             </children>
