--- a/src/main/resources/com/example/banksys/PaskolosSkaiciuokle.fxml
+++ b/src/main/resources/com/example/banksys/PaskolosSkaiciuokle.fxml
@@ -89,11 +89,12 @@
                         <Spinner fx:id="monthSelector" prefWidth="100.0" />
                         <Label fx:id="selectedMonthShow" styleClass="result-label" text="mėnesio įmoka: " />
                 </HBox>
-
         </VBox>
     </left>
     <center>
         <VBox prefHeight="800.0" prefWidth="750.0" styleClass="results-panel" BorderPane.alignment="CENTER">
+            <Label text="Mėnesių vėlavimas:"/>
+            <Spinner fx:id="delayStartMonth"/>
             <padding>
                 <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
             </padding>
