Cleaned up some code, files restructured

--- a/src/main/resources/com/example/banksys/hello-view.fxml
+++ b/src/main/resources/com/example/banksys/hello-view.fxml
@@ -27,7 +27,7 @@
             </font>
         </Label>
 
-        <Label text="Interaktyvi ir paprasta naudoti paskolos skaičiuoklė."
+        <Label text="Paprasta naudoti paskolos skaičiuoklė."
                styleClass="welcome-subtitle">
             <font>
                 <Font size="20.0" />
